[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-tools-mcp"
version = "0.1.0"
description = "Lightweight MCP server for efficient Jupyter notebook reading and navigation"
requires-python = ">=3.10"
dependencies = ["mcp>=1.10.1"]

[project.scripts]
notebook-tools-mcp = "notebook_tools_mcp.server:main"
